--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "spotify-multi-device-server",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Server files for Spotify-Multi-Device",
   "main": "server.js",
   "dependencies": {
     "@types/express": "^4.17.1",
-    "@types/node": "^12.7.5",
+    "@types/mongodb": "^3.3.3",
+    "@types/node": "^12.7.8",
     "@types/spotify-web-api-node": "^4.0.1",
     "@types/uuid": "^3.4.5",
     "body-parser": "^1.19.0",
@@ -16,7 +17,7 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.5.17"
+    "@types/mongoose": "^5.5.18"
   },
   "scripts": {
     "start": "tsc && node server.js"
