--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "@types/spotify-web-api-node": "^4.0.1",
     "@types/uuid": "^3.4.5",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.7.1",
     "spotify-web-api-node": "^4.0.0",
-    "typescript": "^3.6.3",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.5.18"
+    "@types/cors": "^2.8.6",
+    "@types/mongoose": "^5.5.18",
+    "typescript": "^3.7.5"
   },
   "scripts": {
-    "start": "tsc && node server.js"
+    "build": "tsc",
+    "start": "npm i && node dist/server.js"
   },
   "repository": {
     "type": "git",
