--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.7.5",
+    "qrcode": "^1.4.4",
     "rxjs": "^6.5.4",
     "spotify-web-api-node": "^4.0.0",
     "uuid": "^3.4.0"
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/mongoose": "^5.5.18",
+    "@types/qrcode": "^1.3.4",
     "typescript": "^3.7.5"
   },
   "scripts": {
