--- a/package.json
+++ b/package.json
@@ -1,41 +1,67 @@
 {
   "name": "spotify-multi-device-server",
-  "version": "1.1.0",
-  "description": "Server files for Spotify-Multi-Device",
-  "main": "server.js",
+  "version": "0.0.1",
+  "description": "",
+  "author": "",
+  "private": true,
+  "license": "UNLICENSED",
+  "scripts": {
+    "prebuild": "rimraf dist",
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
+  },
   "dependencies": {
-    "@types/express": "^4.17.1",
-    "@types/mongodb": "^3.3.3",
-    "@types/node": "^12.7.8",
-    "@types/spotify-web-api-node": "^4.0.1",
-    "@types/uuid": "^3.4.5",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "mongoose": "^5.7.5",
-    "qrcode": "^1.4.4",
-    "rxjs": "^6.5.4",
-    "spotify-web-api-node": "^4.0.0",
-    "uuid": "^3.4.0"
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/core": "^7.0.0",
+    "@nestjs/platform-express": "^7.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.5.4"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.6",
-    "@types/mongoose": "^5.5.18",
-    "@types/qrcode": "^1.3.4",
-    "typescript": "^3.7.5"
+    "@nestjs/cli": "^7.0.0",
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.0",
+    "@types/express": "^4.17.3",
+    "@types/jest": "25.1.4",
+    "@types/node": "^13.9.1",
+    "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "jest": "^25.1.0",
+    "prettier": "^1.19.1",
+    "supertest": "^4.0.2",
+    "ts-jest": "25.2.1",
+    "ts-loader": "^6.2.1",
+    "ts-node": "^8.6.2",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.7.4"
   },
-  "scripts": {
-    "build": "tsc",
-    "start": "npm i && node dist/server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cbdev-ch/Spotify-Multi-Device-Server.git"
-  },
-  "author": "Koflin",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/cbdev-ch/Spotify-Multi-Device-Server/issues"
-  },
-  "homepage": "https://github.com/cbdev-ch/Spotify-Multi-Device-Server#readme"
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".spec.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
+  }
 }
