--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,15 @@
 {
   "compilerOptions": {
-      "target": "es6",
-      "module": "commonjs",
-      "outDir": "dist",
-      "removeComments": true,
-      "strict": true,
-      "skipLibCheck": true,
-      "strictNullChecks": false,
-      "noImplicitThis": true,
-      "inlineSourceMap": true,
-      "resolveJsonModule": true,
-      "esModuleInterop": true
+    "module": "commonjs",
+    "declaration": true,
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "target": "es2017",
+    "sourceMap": true,
+    "outDir": "./dist",
+    "baseUrl": "./",
+    "incremental": true
   },
-  "include": [
-      "src"
-  ],
-  "exclude": [
-      "node_modules",
-      "dist"
-  ]
+  "exclude": ["node_modules", "dist"]
 }
